[package]
name = "rust-md5"
version = "0.1.0"
authors = [ "Matthew MacGregor <m.macgregor@gmail.com>" ]
description = "Md5 in Rust + Web Assembly (wasm)"
license = "UNLICENSE"
edition = "2021"

# To build for wasm: wasm-pack build --target web
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
md-5 = "0.9.1"
hex-literal = "0.3.1"
wasm-bindgen = "0.2"
hex = "0.4.3"